# JOB-20260603035153-000066

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SPEC.md  alembic.ini  config.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.planning/phases/01-1.-project-overview/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/02-2.-technical-stack/: -SUMMARY-02.md  PLAN-02.md
.planning/phases/03-3.-architecture/: -SUMMARY-03.md  PLAN-03.md
.planning/phases/04-4.-data-model/: -SUMMARY-04.md  PLAN-04.md
.planning/phases/05-5.-project-structure/: -SUMMARY-05.md  PLAN-05.md
.planning/phases/06-6.-out-of-scope/: -SUMMARY-06.md  PLAN-06.md
.planning/phases/07-7.-acceptance-criteria/: -SUMMARY-07.md  PLAN-07.md
accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
api/: __init__.py  dependencies.py  main.py
api/routes/: __init__.py  health.py  items.py
api/schemas/: __init__.py  item.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  users.py
backend/app/core/: __init__.py  errors.py  logging.py  middleware.py  security.py
backend/app/models/: __init__.py  base.py
config/: __init__.py  settings.py  urls.py
core/: admin.py  managers.py  mixins.py  models.py  serializers.py  urls.py  views.py
docs/: 06-out-of-scope.md  README.md
erp_migration/: settings.py
migrations/: README.md  env.py  import_csv.py  models.py
models/: __init__.py  base.py  item.py
requirements/: base.txt  development.txt  production.txt
services/: __init__.py  item_service.py
tests/: conftest.py  test_api.py  test_services.py
validators/: reconcile.py
workers/: __init__.py  celery_app.py  tasks.py
