[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdd-platform"
version = "0.1.0"
description = "ETL and data reconciliation platform for food distribution ERP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Platform Engineering", email = "platform@fdd.example.com"},
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "etl*", "inventory*", "accounting*", "reconciliation*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_django = ["django", "rest_framework"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "DJ", "PT"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E", "F", "W"]
"*/tests/*.py" = ["B011"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = [
    "--reuse-db",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing:skip-covered",
    "--no-cov-on-fail",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:botocore.*",
    "ignore::DeprecationWarning:celery.*",
]
